--- a/Files/style.css
+++ b/Files/style.css
@@ -1,5 +1,8 @@
 :root {
     --main-color: #D2B4DE;
+    --second-color: #A569BD;
+    --third-color: #8E44AD;
+    --forth-color: #F4ECF7;
 }
 
 * {
@@ -25,6 +28,27 @@ body {
     padding-left: 30rem;
 }
 
+section {
+    padding: 1rem 10%;
+    min-height: 100vh;
+    background-color: var(--forth-color);
+}
+
+.btn {
+    display: inline-block;
+    margin-top: 1rem;
+    padding: .8rem 3rem;
+    background-color: var(--second-color);
+    color: white;
+    cursor: pointer;
+    font-size: 1.7rem;
+}
+
+.btn:hover {
+    background-color: var(--third-color);
+    letter-spacing: 0.8px;
+}
+
 header {
     position: fixed;
     top: 0;
@@ -37,6 +61,8 @@ header {
     z-index: 1000;
     flex-flow: column;
     padding: 8rem 2rem;
+    width: 35rem;
+    text-align: center;
 }
 
 header .logo {
@@ -49,5 +75,132 @@ header .logo {
 
 header .logo span {
     text-transform: uppercase;
+    color: var(--second-color);
+}
+
+header .navbar a {
+    display: block;
+    font-size: 2rem;
+    color: white;
+    margin: 2rem 0;
+}
+
+header .navbar a:hover {
+    letter-spacing: 0.8px;
     color: var(--main-color);
+}
+
+header .follow a {
+    font-size: 2.5rem;
+    color: white;
+    margin: 0 .7rem;
+
+}
+
+header .follow a:hover {
+    color: var(--main-color);
+}
+
+#menu-bar {
+    position: fixed;
+    top: 1rem;
+    right: 1rem;
+    z-index: 10000;
+    background-color: var(--second-color);
+    color: white;
+    border-radius: .5rem;
+    padding: 1rem 1.5rem;
+    font-size: 3rem;
+    cursor: pointer;
+    display: none;
+
+}
+
+.home {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.home .image {
+    flex: 1 1 40rem;
+}
+
+.home image img {
+    width: 100%;
+}
+
+.home .content {
+    flex: 1 1 40rem;
+}
+
+.home .content .hi {
+    font-size: 2rem;
+    color: var(--main-color)
+}
+
+.home .content h3 {
+    font-size: 4.5rem;
+    color: var(--second-color);
+    text-transform: uppercase;
+}
+
+.home .content h3 span{
+    color: var(--second-color);
+    text-transform: uppercase;
+}
+
+.home .content .info {
+    font-size: 2.5rem;
+    color: black;
+    padding: .5rem 0;
+}
+
+.home .content .text {
+    font-size: 1.5rem;
+    color: black;
+    padding: .5rem 0;
+}
+
+
+
+
+
+
+@media (max-width: 991px) {
+
+    html {
+        font-size: 55%;
+    }
+
+    body {
+        padding: 0;
+    }
+
+    #menu-bar {
+        display: initial;
+    }
+
+    header {
+        left: -120%;
+
+    }
+
+    header.active {
+        left: 0%;
+        
+    }
+}
+
+
+@media (max-width: 450px) {
+
+    html {
+        font-size: 50%;
+    }
+
+    header {
+        width: 100%;
+    }
 }
