cambios menores y seccion about

--- a/style.css
+++ b/style.css
@@ -180,9 +180,43 @@ header .follow a:hover {
     text-transform: none;
 }
 
+.about .row-1 {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    padding-bottom: 2rem;
 
+}
 
+.about .row-1 .image {
+    flex: 1 1 25rem;
 
+}
+
+.about .row-1 .image img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border: 1rem solid white;
+    border-radius: .5rem;
+    box-shadow: 0 .5rem 1rem rgba(0r, 0, 0, .1);
+}
+
+.about .row-1 .content {
+    flex: 1 1 50rem;
+    
+}
+
+.about .row-1 .content h3 {
+    color: #333;
+    font-size: 3.5rem;
+}
+
+.about .row-1 .content p {
+    color: #666;
+    font-size: 1.7rem;
+    padding: .5rem 0
+}
 
 
 @media (max-width: 991px) {
