--- a/style.css
+++ b/style.css
@@ -211,13 +211,25 @@ header .follow a:hover {
     color: #333;
     font-size: 3.5rem;
     text-transform: none;
-    font-style: italic;
+    /*font-style: italic;*/
 }
 
 .about .row-1 .content p {
     color: #666;
     font-size: 1.7rem;
     padding: .5rem 0
+}
+
+.about .row-2 {
+    padding-top: 8rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about .row-2 p {
+    font-size: 2rem;
+    text-transform: none;
 }
 
 
