--- a/style.css
+++ b/style.css
@@ -232,6 +232,45 @@ header .follow a:hover {
     text-transform: none;
 }
 
+.contact .icons-container {
+    display: flex;
+    gap: 1.5rem;
+    flex-wrap: wrap;
+    padding-bottom: 2rem;
+}
+
+.contact .icons-container .icons {
+    flex: 1 1 25rem;
+    text-align: center;
+    padding: 2rem;
+    background: white;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+    border-radius: .5rem;
+}
+
+.contact .icons-container .icons i {
+    height: 5rem;
+    width: 5rem;
+    line-height: 5rem;
+    font-size: 2rem;
+    background:#8E44AD;
+    color: white;
+    border-radius: 50%;
+}
+
+.contact .icons-container .icons h3 {
+    color:#111;
+    font-size: 2rem;
+    padding: .5rem 0;
+}
+
+.contact .icons-container .icons p {
+    color:#666;
+    font-size: 1.7rem;
+    padding: .5rem 0;
+}
+
+
 
 @media (max-width: 991px) {
 
