--- a/style.css
+++ b/style.css
@@ -270,6 +270,15 @@ header .follow a:hover {
     padding: .5rem 0;
 }
 
+.contact .row .map {
+    flex: 1 1 25rem;
+    border: 1rem solid white;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+    border-radius: .5rem;
+    width: 100%;
+    height: 38rem;
+}
+
 
 
 @media (max-width: 991px) {
